# dxtionary-db

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor-release.yml  appveyor.yml  clang-build.sh  clang-toolchain.cmake  decompress_plain_db.cpp  dxtionary-db.c  dxtionary-db.cpp  dxtionary_version.h.in  gcc-build.sh  gcov-toolchain.cmake  gen-big-raw-data.py  install-clang-tools.sh  mingw-build.sh  mingw-toolchain.cmake  script.sh  xz_stream.cpp  xz_stream.h
ext/sqlite3/: CMakeLists.txt  README.md
sqlite3/: CMakeLists.txt  core_init.in.c  extra_init.c.in
src/: CMakeLists.txt  decompress_plain_db.cpp  decompress_raw_dict.cpp  dict_file_processor.cpp  dict_file_processor.hpp  dxtionary_bind.cpp  dxtionary_bind.h  dxtionary_db.cpp  gz_file_stream.cpp  gz_file_stream.hpp  gz_file_stream_test.cpp  gz_stream.cpp  gz_stream.hpp  import_raw_dict.cpp  xz_stream.cpp  xz_stream.h  xz_stream_test.cpp  zlibexample.c
test/: CMakeLists.txt  CMakeLists.txt.in  data.txt  dict_file_processor_test.cpp  dxtionary_bind_test.cpp  gz_stream_test.cpp  gzipPlaintextDict.csv
